--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,10 @@
         "psr-4": {
             "rock\\validate\\": "src/"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.12-dev"
+        }
     }
 }
